// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of an Icon control with icon 1`] = `
<styled.i
  className="ui-icon fa fa-fw fa-star test-class"
  sizing="normal"
  style={
    Object {
      "backgroundColor": "blue",
      "color": "red",
    }
  }
/>
`;

exports[`Test creation of an Icon control with image 1`] = `
<styled.img
  className="ui-icon"
  sizing="normal"
  src="./test-icon-image.png"
  style={Object {}}
/>
`;

exports[`Test making the ButtonDialog invisible 1`] = `
.c0 {
  text-align: center;
  font-size: 1rem;
  font-weight: inherit;
}

<Icon
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  visible={false}
  width=""
  xcss={null}
>
  <styled.i
    className="ui-icon fa fa-fw fa-bomb"
    sizing="normal"
    style={Object {}}
  >
    <i
      className="ui-icon fa fa-fw fa-bomb c0"
      style={Object {}}
    />
  </styled.i>
</Icon>
`;

exports[`Test retrieval of the Icon props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "id": "",
  "imageFile": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the disabling of the Icon control 1`] = `
.c0 {
  text-align: center;
  font-size: 1rem;
  font-weight: inherit;
}

<Icon
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  visible={true}
  width=""
  xcss={null}
>
  <styled.i
    className="ui-icon fa fa-fw fa-bomb"
    sizing="normal"
    style={Object {}}
  >
    <i
      className="ui-icon fa fa-fw fa-bomb c0"
      style={Object {}}
    />
  </styled.i>
</Icon>
`;
